<resources>
    <string name="app_name">GuessNumber</string>
    <string name="btSendText">¡A jugar!</string>
    <string name="UserHint">Introduce tu nombre de usuario</string>
    <string name="NumIntentosHint">Introduce el número de intentos del máximos</string>
    <string name="TryHint">Introduce tu respuesta</string>
    <string name="btCheck">Comprobar Respuesta</string>
    <string name="btTryAgain">Intentar otra vez</string>
    <string name="mayor">El número a adivinar es mayor</string>
    <string name="menor">El número a adivinar es menor</string>
    <string name="success">¡Has acertado el número!</string>
    <string name="fail">Has consumido tus intentos antes de adivinar el número</string>
    <string name="numIntentos">Intentos restantes: </string>
    <string name="aboutus">About us</string>
    <string name="linkedIn">sergio-morales-recio-b23661178</string>
    <string name="gitHub">smorrec/SendMessageBinding</string>
    <string name="brief">Futuro desarrollador de videojuegos</string>
    <string name="activity">Técnico Superior en desarrollo de aplicaiones multiplataforma</string>
    <string name="name">Sergio</string>
    <string name="action_aboutus">About Us</string>
    <string name="config_fragment_label">ConfigFragment</string>
    <string name="play_fragment_label">PlayFragment</string>
    <string name="fragment_end_play">EndPlayFragment</string>
    <string name="activity_about_us">AboutUs</string>
    <string name="btPlayAgain">Jugar Otra Vez!!</string>
</resources>