<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="game"
            type="com.example.guessnumberfragment.data.Game" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.PlayActivity">

        <EditText
            android:id="@+id/Try"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/UserMarginTop"
            android:autofillHints=""
            android:hint="@string/TryHint"
            android:inputType="text"
            android:minHeight="@dimen/UserMinHeight"
            android:text="@={game.intToString(game.respuesta)}"
            android:textColorHint="@color/etUserColorHint" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textUserMarginTop"
            android:minHeight="@dimen/UserMinHeight"/>

        <Button
            android:id="@+id/btCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btCheckMarginTop"
            android:text="@string/btCheck" />

        <Button
            android:id="@+id/btTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btTryAgainMarginTop"
            android:text="@string/btTryAgain" />
    </LinearLayout>

</layout>